fixing planted.html capitalization

--- a/projects-data.json
+++ b/projects-data.json
@@ -1,5 +1,5 @@
 {
-  "Planted.html": {
+  "planted.html": {
     "title": "Planted",
     "subtitle": "Planted, a plant based food truck and caterer",
     "category": "UX/UI Design",
