Fix project titles in projects-data.json

--- a/projects-data.json
+++ b/projects-data.json
@@ -12,7 +12,7 @@
     "role": "Web Designer, UX/UI Designer, UX Research"
   },
   "clutch.html": {
-    "title": "Clutch / 'NorthEnd Bank', 2019",
+    "title": "Clutch / 'NorthEnd Bank'",
     "subtitle": "A Mobile Solution That Brings The Power Of Budgeting Into The Hands Of Millennials",
     "category": "UX/UI Design",
     "shortBlurb": "A mobile banking solution for millennial budgeting",
@@ -24,7 +24,7 @@
     "role": "UX/UI Designer, UX Research"
   },
   "sony.html": {
-    "title": "Sony, 2019",
+    "title": "Sony",
     "subtitle": "A Mobile Solution That Brings The Power Of Budgeting Into The Hands Of Millennials",
     "category": "UX/UI Design",
     "shortBlurb": "Game creator dashboard design for Sony PlayStation",
