Fix image file names to lowercase
Updated image file names to use lowercase.

--- a/projects-data.json
+++ b/projects-data.json
@@ -52,8 +52,8 @@
     "subtitle": "Proposed Redesign of The Witcher UI",
     "category": "UX/UI Design",
     "shortBlurb": "Proposed Redesign of The Witcher UI",
-    "thumbnailImage": "pictures/Witcher_noHUD.png",
-    "heroImage": "pictures/Witcher_noHUD.png",
+    "thumbnailImage": "pictures/witcher_noHUD.png",
+    "heroImage": "pictures/witcher_noHUD.png",
     "categories": ["game-ui"],
     "timeline": "March 2019?",
     "tools": "Photoshop",
