Update title of Witcher UI project

--- a/projects-data.json
+++ b/projects-data.json
@@ -48,7 +48,7 @@
     "role": "Web Designer"
   },
   "witcher.html": {
-    "title": "Witcher UI Redesign",
+    "title": "The Witcher",
     "subtitle": "Proposed Redesign of The Witcher UI",
     "category": "UX/UI Design",
     "shortBlurb": "Proposed Redesign of The Witcher UI",
